--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,16 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "./index.py",
-            "use": "@vercel/python",
-            "config": { "runtime": "python3.6" }
-        }
+      {
+        "src": "api/app.py",
+        "use": "@vercel/python"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
-        }
+      {
+        "src": "/(.*)",
+        "dest": "api/app.py"
+      }
     ]
-}
+  }
+  
